# soda_pop_proy

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: 3.01-vtf_PAE_sodax64.h5
notebooks/: 1.01_smg_data_source.ipynb  1.02_smg_data_processing.ipynb  3.01_vtf_perceptual_ae.ipynb  3.02_rh_variational_ae.ipynb  3.02_vtf_perceptual_ae copy.ipynb  3.02_vtf_perceptual_generative_ae.ipynb  3.03_rh_variational_ae_copy.ipynb  3.04_vtf_variational_ae.ipynb  3.05_vtf_variational_ae.ipynb
references/: main.go
reports/: reporte_ae.ipynb
soda_gen_proy/: __init__.py  dataset.py  features.py  plots.py
soda_gen_proy/modeling/: predict.py  train.py
