[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "soda_gen_proy"
version = "0.0.1"
description = "Repository for soda image generation using Autoencoders"
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "ipykernel>=7.2.0",
    "loguru",
    "matplotlib>=3.10.8",
    "mkdocs",
    "numpy>=1.26.0",
    "pandas>=3.0.1",
    "pip",
    "python-dotenv",
    "ruff",
    "tensorflow==2.19.0",
    "tensorflow-datasets==4.9.9",
    "tensorflow-hub==0.16.1",
    "tensorflow-metadata==1.17.3",
    "tensorflow-probability==0.25.0",
    "tensorflow-text==2.19.0",
    "tensorflow_decision_forests==1.12.0",
    "tqdm",
    "typer",
    "tensorflow-probability==0.25.0",
    "tf_keras==2.19.0"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["soda_gen_proy"]
include = ["pyproject.toml", "soda_gen_proy/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["soda_gen_proy"]
force-sort-within-sections = true

